<resources>
    <string name="app_name">FirstApplication</string>
    <string name="dadm">Welcome to my application</string>
    <string name="textChanged">Text Changed!</string>
    <string name="button1Name">GET QUOTATIONS</string>
    <string name="button2Name">FAVOURITE QUOTATIONS</string>
    <string name="button3Name">SETTINGS</string>
    <string name="button4Name">ABOUT</string>
    <string name="buttonAct1Name">Author Info</string>
    <string name="usernametext">Name that identifies the user</string>
    <string name="username">Insert your name</string>
    <string name="languagetext">Quotations will be received in the selected language</string>
    <string name="webrequeststext">Web request will be performed using the selected HTTP method</string>
    <string name="englisht">English</string>
    <string name="russiant">Russian</string>
    <string name="aboutinfo">First Application made by \n\n Pablo López Orrios \n\n pabloor@epsa.upv.es \n\n 2020</string>
    <string name="noquotationtext">Hello %1s!\nPress Refresh to get a new quotation</string>
    <string name="samplequotations">Sample quotation 1</string>
    <string name="sampleauthor">Sample author 1</string>
    <string name="title_activity_settings2">Settings</string>
    <string name="GETt" translatable="false">GET</string>
    <string name="POSTt" translatable="false">POST</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>

    <string name="AlertRemovalMessage"> Are you sure you want to remove this quotation? </string>
    <string name="AlertRemovalMessageAll"> Are you sure you want to remove all quotations? </string>
    <string name="yes">yes</string>
    <string name="no">no</string>

    <string name="AddText">Add</string>
    <string name="RefreshText">Refresh</string>
    <string name="ClearText">Clear all</string>

    <string name="TitNameField">Username</string>
    <string name="DescNameField">Name of the user that will appear on the application</string>
    <string name="TitCategoryWebService">Web Service</string>
    <string name="DescCategoryWebService">Type of web service that the app uses</string>
    <string name="TitQuoatationsLanguaje">Quotations Language</string>
    <string name="DescQuotationsLangugaje">The laguange that the quotations will appear in</string>
    <string name="TitAppLanguage">Application language</string>
    <string name="DescAppLanguage">The language that the application will have</string>
    <string name="TitHTTPMethod">HTTP method</string>
    <string name="DescHTTPMethod">The HTTP method that will be used on petitions</string>
    <string name="Roomt" translatable="false">Room</string>
    <string name="SQLitet" translatable="false">SQLiteOpenHelper</string>
    <string name="Typet">Type</string>
    <string name="TypeDatabasedesc">Type of database to use in the application</string>
</resources>
