<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/bGetQuotations"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:onClick="launchActivity"
        android:text="@string/button1Name"
        android:background="@drawable/buttons"
        android:textColor="@color/buttons"
        app:layout_constraintBottom_toTopOf="@+id/bFavouriteQuotations"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/bFavouriteQuotations"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:onClick="launchActivity"
        android:text="@string/button2Name"
        android:background="@drawable/buttons"
        android:textColor="@color/buttons"
        app:layout_constraintBottom_toTopOf="@+id/bSettings"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bGetQuotations" />

    <Button
        android:id="@+id/bSettings"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:onClick="launchActivity"
        android:text="@string/button3Name"
        android:background="@drawable/buttons"
        android:textColor="@color/buttons"
        app:layout_constraintBottom_toTopOf="@+id/bAbout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bFavouriteQuotations" />

    <Button
        android:id="@+id/bAbout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:onClick="launchActivity"
        android:text="@string/button4Name"
        android:background="@drawable/buttons"
        android:textColor="@color/buttons"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bSettings" />

</androidx.constraintlayout.widget.ConstraintLayout>